--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h4 class="bored-text"></h4>
         <p class="author-text"></p>
         <button class="change-button">ping</button>
+        <button class="clear-button">clear</button>
     </main>
 
     <script src="script.js"></script>
