--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     </header>
 
     <main>
+        <p>Tap <b>'ping'</b> to generate a random quote</p>
         <h4 class="bored-text"></h4>
         <p class="author-text"></p>
         <button class="change-button">ping</button>
-        <button class="clear-button">clear</button>
+        <button class="clear-button" id="clear-btn">clear</button>
     </main>
 
     <script src="script.js"></script>
